2010-01-08  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h (Array<T>::crefT): New helper typedef.
	(Array<T>::elem const, Array<T>::xelem const, 
	Array<T>::checkelem const, Array<T>::operator () const): Return crefT.
	(Array<T>::range_error const): Remove overloads.
	* Array.cc (Array<T>::range_error const): Remove overloads.

2010-01-07  John W. Eaton  <jwe@octave.org>

	* oct-time.cc (octave_time::stamp): Assume gettimeofday is
	available and that it takes two arguments.

2010-01-07  Jaroslav Hajek  <highegg@gmail.com>

	* lo-utils.cc (octave_fgets (FILE *, bool&)): Add OCTAVE_QUIT at the
	end.

2010-01-05  John W. Eaton  <jwe@octave.org>

	* Makefile.am (AM_CPPFLAGS): Include @CPPFLAGS@ and -I../libgnu
	in the list.

2009-12-30  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::maybe_reduce): Implement reduction rule
	for subsequent ones () indices.

2009-12-28  John W. Eaton  <jwe@octave.org>

	* file-ops.cc (fle_ops::mkdir_internal,
	file_ops::mkfifo_internal): New private static functions.
	* file-ops.h (file_ops::mkdir, file_ops::mkdir): Move
	definitions here from file-ops.cc.  Forward to X_internal functions.

2009-12-26  John W. Eaton  <jwe@octave.org>

	* file-stat.cc (lstat): Delete replacement function.
	(file_fstat::update_internal): Assume fstat is available.

2009-12-25  John W. Eaton  <jwe@octave.org>

	* file-ops.cc (file_ops::mkdir): Assume we have an mkdir
	function that takes two arguments.
	* mkdir.c: Delete.
	* Makefile.am (LIBOCTAVE_C_SOURCES): Remove mkdir.c from the list.

2009-12-25  John W. Eaton  <jwe@octave.org>

	* oct-md5.cc (oct_md5_result_to_str): New function.
	(oct_md5, oct_md5_file): Simplify using gnulib md5 functions and
	oct_md5_result_to_str.

	* Makefile.am (INCS): Remove md5.h from the list.
	(LIBOCTAVE_C_SOURCES): Remove md5.c from the list.
	* md5.c, md5.h: Delete.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Eliminate TOPDIR variable in favor of built-in automake