@@ -1,3 +1,8 @@
+2010-01-11  Rik <octave@nomad.inbox5.com>
+
+	* Makefile.am: Remove unnecessary use of simple_move_if_change_rule to allow
+	Make to update timestamps
+
 2010-01-08  Jaroslav Hajek  <highegg@gmail.com>
 
 	* Array.h (Array<T>::crefT): New helper typedef.
